--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "express": "2.5.11",
     "socket.io": "0.9.8"
   },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.1.x"
+  },
   "licenses": [
     {
       "type": "MIT",
