--- a/backends/haskell/ot-demo.cabal
+++ b/backends/haskell/ot-demo.cabal
@@ -19,7 +19,9 @@ executable ot-demo
                        ot == 0.1.2,
                        yesod >= 1.1 && < 1.2,
                        yesod-static >= 1.1 && < 1.2,
-                       warp >= 1.3 && < 1.5,
                        concurrent-extra >= 0.7,
-                       text
-  ghc-options:         -threaded -O2
+                       text,
+                       aeson,
+                       containers,
+                       http-types
+  ghc-options:         -threaded -O2 -Wall
