--- a/public/components/codemirror/package.json
+++ b/public/components/codemirror/package.json
@@ -1,7 +1,7 @@
 {
     "name": "codemirror",
-    "version":"3.10.00",
-    "main": "codemirror.js",
+    "version":"3.10.01",
+    "main": "lib/codemirror.js",
     "description": "In-browser code editing made bearable",
     "licenses": [{"type": "MIT",
                   "url": "http://codemirror.net/LICENSE"}],
