Haskell backend: stackify

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ backends/haskell/client_session_key.aes
 backends/haskell/dist
 backends/haskell/.cabal-sandbox
 backends/haskell/cabal.sandbox.config
+backends/haskell/.stack-work
